force-app/main/default/objects/ShGl_AutomatedTestRun__c/ShGl_AutomatedTestRun__c.object-meta.xml
<CustomObject>
    <description>Natively schedule automated test runs of your Force.com Apex code and email the results to multiple addresses.</description>
    <label>Automated Test Run</label>
    <nameField>
        <label>Automated Test Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Automated Test Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>