force-app/main/default/objects/ShGl_AutomatedTestRun__c/fields/ShGl_Active__c.field-meta.xml
<CustomField>
    <fullName>ShGl_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active</description>
    <inlineHelpText>Test Run is Active - Only one should be active at any time.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>