force-app/main/default/objects/ShGl_AutomatedTestRun__c/fields/ShGl_EmailOnPass__c.field-meta.xml
<CustomField>
    <fullName>ShGl_EmailOnPass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send email when all tests pass</description>
    <inlineHelpText>Send email when all tests pass</inlineHelpText>
    <label>Email on Pass</label>
    <type>Checkbox</type>
</CustomField>