force-app/main/default/objects/ShGl_AutomatedTestRun__c/fields/ShGl_Emails__c.field-meta.xml
<CustomField>
    <fullName>ShGl_Emails__c</fullName>
    <description>Emails</description>
    <inlineHelpText>Emails (comma-separated email addresses)</inlineHelpText>
    <label>Emails</label>
    <type>TextArea</type>
</CustomField>