force-app/main/default/objects/ShGl_AutomatedTestRun__c/fields/ShGl_ExcludedClasses__c.field-meta.xml
<CustomField>
    <fullName>ShGl_ExcludedClasses__c</fullName>
    <description>Excluded Classes</description>
    <inlineHelpText>Excluded Classes (comma-delimited list of classes to exclude from testing)</inlineHelpText>
    <label>Excluded Classes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>