force-app/main/default/objects/ShGl_AutomatedTestRun__c/fields/ShGl_ExcludedManagedPackages__c.field-meta.xml
<CustomField>
    <fullName>ShGl_ExcludedManagedPackages__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Excluded Managed Packages</description>
    <inlineHelpText>Excluded Managed Packages</inlineHelpText>
    <label>Excluded Managed Packages</label>
    <type>Checkbox</type>
</CustomField>