force-app/main/default/objects/ShGl_AutomatedTestRun__c/fields/ShGl_Query__c.field-meta.xml
<CustomField>
    <fullName>ShGl_Query__c</fullName>
    <defaultValue>&quot;%Test%&quot;</defaultValue>
    <description>Class name like query</description>
    <inlineHelpText>Query to match test class names, ie. Test% or %_Test(case insensitive)</inlineHelpText>
    <label>Query</label>
    <length>80</length>
    <type>Text</type>
</CustomField>