force-app/main/default/objects/ShGl_AutomatedTestRun__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ShGl_Active__c</columns>
    <columns>ShGl_EmailOnPass__c</columns>
    <columns>ShGl_Emails__c</columns>
    <columns>ShGl_ExcludedClasses__c</columns>
    <columns>ShGl_ExcludedManagedPackages__c</columns>
    <columns>ShGl_Query__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>